[tool.setuptools]
packages = ["pyLDLE2"]

[build-system]
requires = ["setuptools>=61.2",
            "matplotlib==3.5.1",
            "multiprocess==0.70.13",
            "numpy",
            "Pillow==9.0.1",
            "nbsphinx",
            "ipykernel",
            "pandas",
            "scikit_learn",
            "scipy",
            "scs",
            "hyperspy==1.7.3",
            "umap-learn==0.5.3",
            "pykeops"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyLDLE2"
version = "0.1.21"
authors = [
  { name="Dhruv Kohli, Alex Cloninger, Gal Mishne" },
]
description = "Low Distortion Local Eigenmaps and its variations."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chiggum/pyLDLE2"
"Bug Tracker" = "https://github.com/chiggum/pyLDLE2/issues"
